moved swagger definitions to separate files
